magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/table.scss
@charset "UTF-8";

@mixin table {

.v-magnolia-table {
	position:relative;
	background:none repeat scroll 0 0 $c80;
}

.v-magnolia-table .v-table-table {
	font-family:Verdana, sans-serif;
	font-size:12px;
}

.v-magnolia-table .v-table-cell-content {
	border-bottom:1px dashed $c14;
	border-right: none;
	padding:5px;
	line-height:18px;
	color: $c90;
}

.v-magnolia-table .v-table-header-wrap {
	padding-bottom: 1px;
	border: none;
	background: $c16;
}

.v-magnolia-table .v-table-body-wrapper {
	border: none;
}

.v-table-header-wrap, .v-table-header-drag {
	height:auto;
}

.v-magnolia-table .v-table-cell-wrapper {
	position: relative;
	margin-top: 1px;
	margin-bottom: -1px;
}

.v-magnolia-table .v-table-resizer {
    width:1px;
    height:20px;
    margin-top:10px;
    padding-left:0;
    border-right:1px dotted $c13;
    background:none;
}
.v-magnolia-table .v-table-header td:last-child .v-table-resizer {visibility:hidden;}

.v-magnolia-table .v-table-caption-container {
	color:$c10;
	font-size:12px;
	font-weight:normal;
	font-family:Verdana,sans-serif;
	padding:10px 5px 4px;
	margin:0;
}

.v-table-header-cell-asc .v-table-sort-indicator, .v-table-header-cell-desc .v-table-sort-indicator {
    margin-top:16px;
}

.v-magnolia-table .square {
	width: 15px;
	height: 15px;
	display: inline-block;
	margin-left: 5px;
    margin-right: 5px;
    margin-top: 5px;
}

.v-magnolia-table .tree-table-label.root .square {
	background-color: #A7B900;
}

.v-magnolia-table .tree-table-label.child .square {
	background-color: blue;
}

.v-magnolia-table .tree-table-label {
	display: inline-block;
	vertical-align: middle;
}

.v-magnolia-table .v-table-header td:first-child span {
	padding-left: 29px;
}

.v-treetable .v-table-header td:first-child span {
    padding-left: 50px;
}

.v-magnolia-table .v-select-all {
	position:absolute;
	margin-top:-22px;
	left:10px;
}
.tablet .v-magnolia-table .v-select-all {margin-top:-23px;}

.v-magnolia-table tr.v-selected .v-table-cell-content {
	background:$c10;
	color:$c80;
}

*:focus {
	outline:none;
}

/*.v-table-focus .v-table-cell-wrapper {margin:0;}*/
.v-table-focus .v-table-cell-content {border-top:none;}

.v-magnolia-table .v-selection-cb {
    position: relative;
    top: -1px;
    margin-left:5px;
    margin-right: 10px;
}

.v-magnolia-table .v-table-row:hover,
.v-magnolia-table .v-table-row-odd:hover {background-color:$c16;}
.tablet .v-magnolia-table .v-table-row:hover {background-color:transparent;}
.v-magnolia-table .v-selected:hover {background-color: $c10;}

.v-magnolia-table .v-treetable-treespacer {
  position: relative;
  top: -1px;
  display: inline-block;
  height: 16px;
  vertical-align: text-bottom;
  background: none;
  color: $c12;
  font-size: 20px;
  text-align: right;
  width: 20px;
}
.tablet .v-magnolia-table .v-treetable-treespacer {
  font-size: 28px;
}

.v-table-icon-element {
  color: $c12;
  margin-left: 0px;
  margin-right: 4px;
  font-size: 19px;
  vertical-align: middle;
}

}

